--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
     <nav>
         <img src="./Asset/bars3.png" alt="" id="navigationToggle" />
         <ul id="navigation">
-            <li><a href="./home.html" class="nav-child">HOME</a></li>
+            <li><a href="./index.html" class="nav-child">HOME</a></li>
             <li><a href="./news.html" class="nav-child">NEWS</a></li>
             <li><a href="./register.html" class="nav-child">REGISTER</a></li>
             <li><a href="./heroes.html" class="nav-child">HEROES</a></li>
