perf: change image to webp

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/home.css">
-    <title>Document</title>
+    <title>NOKA</title>
 </head>
 <body>
     <nav>
-        <img src="./Asset/bars3.png" alt="" id="navigationToggle" />
+        <img src="./Asset/bars3.webp" alt="" id="navigationToggle" />
         <ul id="navigation">
             <li><a href="./home.html" class="nav-child">HOME</a></li>
             <li><a href="./news.html" class="nav-child">NEWS</a></li>
@@ -31,7 +31,7 @@
         <div class="container">
             <h2>What's On Today</h2>
                 <div class="news">
-                    <img src="./Asset/nintendo switch.jpg" alt="">
+                    <img src="./Asset/nintendo switch.webp" alt="">
                     <h3>Nintendo Switch Development Underway</h3>
                     <p>Developer are starting to develop NIKO 3 for Nintendo Switch. The games is expected to enter Alpha testing in Late 2022.</p>
                 </div>
@@ -71,16 +71,16 @@
         </div>
         <div class="container2">
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/ig2.png" alt="">@nikogames
+                <img src="./Asset/ig2.webp" alt="">@nikogames
             </a>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/twiiter.png" alt="">@nikogames
+                <img src="./Asset/twiiter.webp" alt="">@nikogames
             </a>
             <a href="mailto: info@nikogames.co.id" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/mail.png" alt="">info@nikogames.co.id
+                <img src="./Asset/mail.webp" alt="">info@nikogames.co.id
             </a>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/facebook.png" alt="">nikogames
+                <img src="./Asset/facebook.webp" alt="">nikogames
             </a>
         </div>
     </footer>
