--- a/news.html
+++ b/news.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/news.css">
-    <title>Document</title>
+    <title>News | NOKA</title>
 </head>
 <body>
     <!-- NAVBAR -->
     <nav>
-        <img src="./Asset/bars3.png" alt="" id="navigationToggle" />
+        <img src="./Asset/bars3.webp" alt="" id="navigationToggle" />
         <ul id="navigation">
             <li><a href="./index.html" class="nav-child">HOME</a></li>
             <li><a href="./news.html" class="nav-child">NEWS</a></li>
@@ -27,25 +27,25 @@
         </div>
         <div class="container">
             <div class="content">
-                <img src="./Asset/nintendo switch.jpg" alt="">
+                <img src="./Asset/nintendo switch.webp" alt="">
                 <h3>Nintendo Switch Development Underway</h3>
                 <p>Developer are starting to develop NIKO 3 for Nintendo Switch. The games is expected to enter Alpha testing in Late 2022.</p>
             </div>
             
             <div class="content">
-                <img src="./Asset/ps5.jpg" alt="">
+                <img src="./Asset/ps5.webp" alt="">
                 <h3>NIKO 3 for PlayStation&REG; 5</h3>
                 <p>Finally you can play NIKO 3 in your PlayStation&reg; 5. Go grab one at your local game store or simply head over to our <a href="./register.html">registration</a> for purchasing. </p>
             </div>
 
             <div class="content">
-                <img src="./Asset/xbox.jpg" alt="">
+                <img src="./Asset/xbox.webp" alt="">
                 <h3>XBOX Ready</h3>
                 <p>After NIKO 2 late XBOX release, now NIKO 3 for XBOX will be released in parallel with other platform. No more waiting, just playing.</p>
             </div>
             
             <div class="content">
-                <img src="./Asset/rtx.jpg" alt="">
+                <img src="./Asset/rtx.webp" alt="">
                 <h3>No More Tearing, Just Ray Tracing</h3>
                 <p>With the release of the new NVIDIA RTX Series card, NIKO 3 now finally able to be play with ray tracing without any lag. Enjoy your immersive gaming experience and battle on.</p>
             </div>
@@ -63,16 +63,16 @@
         </div>
         <div class="container2">
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/ig2.png" alt="">@nikogames
+                <img src="./Asset/ig2.webp" alt="">@nikogames
             </a>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/twiiter.png" alt="">@nikogames
+                <img src="./Asset/twiiter.webp" alt="">@nikogames
             </a>
             <a href="mailto: info@nikogames.co.id" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/mail.png" alt="">info@nikogames.co.id
+                <img src="./Asset/mail.webp" alt="">info@nikogames.co.id
             </a>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/facebook.png" alt="">nikogames
+                <img src="./Asset/facebook.webp" alt="">nikogames
             </a>
         </div>
     </footer>
