--- a/register.html
+++ b/register.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/register.css">
-    <title>Document</title>
+    <title>Register | NOKA</title>
 </head>
 <body>
     <!-- NAVBAR -->
     <nav>
-        <img src="./Asset/bars3.png" alt="" id="navigationToggle" />
+        <img src="./Asset/bars3.webp" alt="" id="navigationToggle" />
         <ul id="navigation">
             <li><a href="./index.html" class="nav-child">HOME</a></li>
             <li><a href="./news.html" class="nav-child">NEWS</a></li>
@@ -29,9 +29,9 @@
                     <input type="password" name="password" id="password" placeholder="Password">
                     <button type="submit">Login</button>
                     <div class="logo">
-                        <img src="./Asset/facebookcolor.png" alt="">
-                        <img src="./Asset/Gmail.png" alt="">
-                        <img src="./Asset/twiitercolor.png" alt="">
+                        <img src="./Asset/facebookcolor.webp" alt="">
+                        <img src="./Asset/Gmail.webp" alt="">
+                        <img src="./Asset/twiitercolor.webp" alt="">
                     </div>
                 </form>
             </div>
@@ -75,16 +75,16 @@
         </div>
         <div class="container2">
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/ig2.png" alt="">@nikogames
+                <img src="./Asset/ig2.webp" alt="">@nikogames
             </a>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/twiiter.png" alt="">@nikogames
+                <img src="./Asset/twiiter.webp" alt="">@nikogames
             </a>
             <a href="mailto: info@nikogames.co.id" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/mail.png" alt="">info@nikogames.co.id
+                <img src="./Asset/mail.webp" alt="">info@nikogames.co.id
             </a>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/facebook.png" alt="">nikogames
+                <img src="./Asset/facebook.webp" alt="">nikogames
             </a>
         </div>
     </footer>
