--- a/esports.html
+++ b/esports.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/esports.css">
-    <title>Document</title>
+    <title>Esports | NOKA</title>
 </head>
 <body>
     <!-- NAVBAR -->
     <nav>
-        <img src="./Asset/bars3.png" alt="" id="navigationToggle" />
+        <img src="./Asset/bars3.webp" alt="" id="navigationToggle" />
         <ul id="navigation">
             <li><a href="./index.html" class="nav-child">HOME</a></li>
             <li><a href="./news.html" class="nav-child">NEWS</a></li>
@@ -53,7 +53,7 @@
                         <h6>2022 NOKA Minor</h6>
                         <p><b>SEA</b> NOKA Elite 2 <span  class="score">0 - 0</span> EVOS <b>SEA</b></p>
                     </div>
-                    <a href="https://youtube.com" target="_blank" rel="noopener noreferrer"><button><img src="./Asset/youtube.png" alt=""> Watch Now</button></a>
+                    <a href="https://youtube.com" target="_blank" rel="noopener noreferrer"><button><img src="./Asset/youtube.webp" alt=""> Watch Now</button></a>
                 </div>
                 <div class="schedule">
                     <h4>Upcoming</h4>
@@ -86,16 +86,16 @@
         </div>
         <div class="container2">
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/ig2.png" alt="">@nikogames
+                <img src="./Asset/ig2.webp" alt="">@nikogames
             </a>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/twiiter.png" alt="">@nikogames
+                <img src="./Asset/twiiter.webp" alt="">@nikogames
             </a>
             <a href="mailto: info@nikogames.co.id" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/mail.png" alt="">info@nikogames.co.id
+                <img src="./Asset/mail.webp" alt="">info@nikogames.co.id
             </a>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/facebook.png" alt="">nikogames
+                <img src="./Asset/facebook.webp" alt="">nikogames
             </a>
         </div>
     </footer>
