--- a/news.html
+++ b/news.html
@@ -1,82 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/news.css">
-    <title>News | NOKA</title>
-</head>
-<body>
-    <!-- NAVBAR -->
-    <nav>
-        <img src="./Asset/bars3.webp" alt="" id="navigationToggle" />
-        <ul id="navigation">
-            <li><a href="./index.html" class="nav-child">HOME</a></li>
-            <li><a href="./news.html" class="nav-child">NEWS</a></li>
-            <li><a href="./register.html" class="nav-child">REGISTER</a></li>
-            <li><a href="./heroes.html" class="nav-child">HEROES</a></li>
-            <li><a href="./esports.html" class="nav-child">ESPORTS</a></li>
-        </ul>
-    </nav>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./CSS/news.css" />
+		<title>News | NOKA</title>
+	</head>
+	<body>
+		<!-- NAVBAR -->
+		<nav>
+			<img src="./Asset/bars3.webp" alt="" id="navigationToggle" loading="eager" decoding="sync" />
+			<ul id="navigation">
+				<li><a href="./index.html" class="nav-child">HOME</a></li>
+				<li><a href="./news.html" class="nav-child">NEWS</a></li>
+				<li><a href="./register.html" class="nav-child">REGISTER</a></li>
+				<li><a href="./heroes.html" class="nav-child">HEROES</a></li>
+				<li><a href="./esports.html" class="nav-child">ESPORTS</a></li>
+			</ul>
+		</nav>
 
-    <div class="news">
-        <div class="title">
-            <h2>NEWS</h2>
-            <hr class="solid">
-        </div>
-        <div class="container">
-            <div class="content">
-                <img src="./Asset/nintendo switch.webp" alt="">
-                <h3>Nintendo Switch Development Underway</h3>
-                <p>Developer are starting to develop NIKO 3 for Nintendo Switch. The games is expected to enter Alpha testing in Late 2022.</p>
-            </div>
-            
-            <div class="content">
-                <img src="./Asset/ps5.webp" alt="">
-                <h3>NIKO 3 for PlayStation&REG; 5</h3>
-                <p>Finally you can play NIKO 3 in your PlayStation&reg; 5. Go grab one at your local game store or simply head over to our <a href="./register.html">registration</a> for purchasing. </p>
-            </div>
+		<div class="news">
+			<div class="title">
+				<h2>NEWS</h2>
+				<hr class="solid" />
+			</div>
+			<div class="container">
+				<div class="content">
+					<img src="./Asset/nintendo switch.webp" alt="" loading="lazy" decoding="async" />
+					<h3>Nintendo Switch Development Underway</h3>
+					<p>
+						Developer are starting to develop NIKO 3 for Nintendo Switch. The games is expected to
+						enter Alpha testing in Late 2022.
+					</p>
+				</div>
 
-            <div class="content">
-                <img src="./Asset/xbox.webp" alt="">
-                <h3>XBOX Ready</h3>
-                <p>After NIKO 2 late XBOX release, now NIKO 3 for XBOX will be released in parallel with other platform. No more waiting, just playing.</p>
-            </div>
-            
-            <div class="content">
-                <img src="./Asset/rtx.webp" alt="">
-                <h3>No More Tearing, Just Ray Tracing</h3>
-                <p>With the release of the new NVIDIA RTX Series card, NIKO 3 now finally able to be play with ray tracing without any lag. Enjoy your immersive gaming experience and battle on.</p>
-            </div>
+				<div class="content">
+					<img src="./Asset/ps5.webp" alt="" loading="lazy" decoding="async" />
+					<h3>NIKO 3 for PlayStation&REG; 5</h3>
+					<p>
+						Finally you can play NIKO 3 in your PlayStation&reg; 5. Go grab one at your local game
+						store or simply head over to our <a href="./register.html">registration</a> for
+						purchasing.
+					</p>
+				</div>
 
-        </div>
-    </div>
+				<div class="content">
+					<img src="./Asset/xbox.webp" alt="" loading="lazy" decoding="async" />
+					<h3>XBOX Ready</h3>
+					<p>
+						After NIKO 2 late XBOX release, now NIKO 3 for XBOX will be released in parallel with
+						other platform. No more waiting, just playing.
+					</p>
+				</div>
 
+				<div class="content">
+					<img src="./Asset/rtx.webp" alt="" loading="lazy" decoding="async" />
+					<h3>No More Tearing, Just Ray Tracing</h3>
+					<p>
+						With the release of the new NVIDIA RTX Series card, NIKO 3 now finally able to be play
+						with ray tracing without any lag. Enjoy your immersive gaming experience and battle on.
+					</p>
+				</div>
+			</div>
+		</div>
 
-<!-- FOOTER -->
-    <footer>
-        <div class="container">
-            <h3>NOKA 3&trade;</h3>
-            <h4>Niko Game Studions Inc.</h4>
-            <h4>About Us</h4>
-        </div>
-        <div class="container2">
-            <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/ig2.webp" alt="">@nikogames
-            </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/twiiter.webp" alt="">@nikogames
-            </a>
-            <a href="mailto: info@nikogames.co.id" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/mail.webp" alt="">info@nikogames.co.id
-            </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="./Asset/facebook.webp" alt="">nikogames
-            </a>
-        </div>
-    </footer>
-
-</body>
-<script src="./script.js"></script>
+		<!-- FOOTER -->
+		<footer>
+			<div class="container">
+				<h3>NOKA 3&trade;</h3>
+				<h4>Niko Game Studions Inc.</h4>
+				<h4>About Us</h4>
+			</div>
+			<div class="container2">
+				<a href="http://" target="_blank" rel="noopener noreferrer">
+					<img src="./Asset/ig2.webp" alt="" loading="lazy" decoding="async" />@nikogames
+				</a>
+				<a href="http://" target="_blank" rel="noopener noreferrer">
+					<img src="./Asset/twiiter.webp" alt="" loading="lazy" decoding="async" />@nikogames
+				</a>
+				<a href="mailto: info@nikogames.co.id" target="_blank" rel="noopener noreferrer">
+					<img src="./Asset/mail.webp" alt="" loading="lazy" decoding="async" />info@nikogames.co.id
+				</a>
+				<a href="http://" target="_blank" rel="noopener noreferrer">
+					<img src="./Asset/facebook.webp" alt="" loading="lazy" decoding="async" />nikogames
+				</a>
+			</div>
+		</footer>
+	</body>
+	<script src="./script.js"></script>
 </html>
